--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -48,7 +48,7 @@ footer.footer
 								use(xlink:href='./img/brands.svg#behance')
 
 					.footer-btn
-						button.btn.sm-100(type="button") Записаться на консультацию
+						button.btn.sm-100(type="button" data-btn="feedback") Записаться на консультацию
 
 				//MAP
 				.footer-map
