--- a/src/pug/sections/_our-team.pug
+++ b/src/pug/sections/_our-team.pug
@@ -7,7 +7,7 @@ section.team
 			p наши врачи
 		
 		.header-block
-			h2.h2 Для вас работают опытные профессионалы
+			h2.h2 Для вас работают&nbsp;опытные профессионалы
 			a(href="doctors.html").btn-primary.hide-sm 
 				span Все врачи
 				svg.svg-rarr
