--- a/src/pug/sections/page-review/_review-page-content.pug
+++ b/src/pug/sections/page-review/_review-page-content.pug
@@ -18,7 +18,7 @@ section.testimonial.pb-110
 								span Преподаватель музыки
 							
 							.testimonial-card__txt
-								p Мне понравился главный врач стоматологии "Нью Лайн Дент", мне понравилось его отношения с молодыми коллегами к пациенту. Здесь мне решили проблемы, которые не смогли решить в другой стоматологии. В будущем я могу расчитывать на эту клинику. Именно того, что мне предложил Карен Овсепович мне никто не предлагал.
+								p Мне понравился главный врач стоматологии "Нью Лайн Дент", мне понравилось его отношения с&nbsp;молодыми коллегами к пациенту. Здесь мне решили проблемы, которые не&nbsp;смогли решить в другой стоматологии. В будущем я могу расчитывать на эту клинику. Именно того, что мне предложил Карен Овсепович мне никто не предлагал.
 							
 							.rating-block
 								span.rating-star
@@ -76,7 +76,7 @@ section.testimonial.pb-110
 								span Преподаватель музыки
 							
 							.testimonial-card__txt
-								p Мне понравился главный врач стоматологии "Нью Лайн Дент", мне понравилось его отношения с молодыми коллегами к пациенту. Здесь мне решили проблемы, которые не смогли решить в другой стоматологии. В будущем я могу расчитывать на эту клинику. Именно того, что мне предложил Карен Овсепович мне никто не предлагал.
+								p Мне понравился главный врач стоматологии "Нью Лайн Дент", мне понравилось его отношения с&nbsp;молодыми коллегами к пациенту. Здесь мне решили проблемы, которые не&nbsp;смогли решить в другой стоматологии. В будущем я могу расчитывать на эту клинику. Именно того, что мне предложил Карен Овсепович мне никто не предлагал.
 							
 							.rating-block
 								span.rating-star
