--- a/src/pug/sections/promos/_promo-therapy.pug
+++ b/src/pug/sections/promos/_promo-therapy.pug
@@ -17,7 +17,7 @@
 					.promo-subtitle
 						p Изготавливаем коронки в срок от 1 дня
 						p Гарантируем эстетичный и долговечный результат
-						p Используем все виды материалов и конструкций
+						p Используем все виды материалов и&nbsp;конструкций
 						
 					.text-card
 						p.txt-primary Ближайшее время для записи на&nbsp;консультацию
@@ -38,7 +38,7 @@
 								.product-card__img
 									img(src='./img/service/serv12.svg'  width='70' height='73' loading='lazy' alt='img')
 								.product-card__col
-									.product-card__title Лечение поверхностного кариеса
+									.product-card__title Лечение поверхност&shy;ного кариеса
 							.time-element 30 минут
 							p 30 минут
 							
