--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -66,6 +66,12 @@
 	height: 23px;
 	}
 }
+.svg-cross{
+	width: 25px;
+	height: 25px;
+	color: #b9b1a6;
+	display: block;
+}
 .quote-right{
 	width: 39px;
 	height: 33px;
