--- a/src/scss/sections/_doctors.scss
+++ b/src/scss/sections/_doctors.scss
@@ -91,7 +91,7 @@
 		height: remy(550);
 	}
 	@media (max-width: 767px) {
-		aspect-ratio: 333/225;
+		// aspect-ratio: 333/225;
 		height: auto;
 	}
 }
