--- a/src/scss/sections/_feedback.scss
+++ b/src/scss/sections/_feedback.scss
@@ -46,7 +46,7 @@
 			padding-left: 35px;
 			
 		}
-		.fake-placeholder{left: 35px;top:17px;font-size: 16px;}
+		.form-item .fake-placeholder{left: 35px;top:17px;font-size: 16px;}
 	}
 }
 .feedback__content{
