--- a/src/pug/pages/service-page.pug
+++ b/src/pug/pages/service-page.pug
@@ -9,7 +9,7 @@ block content
 					li
 						a(href="index.html") Newlinedent
 					li
-						a(href="blog.html") Блог
+						a(href="#!") Услуги
 		
 		include ../sections/_service-page-content
 		include ../sections/_feedback
