--- a/src/pug/sections/promos/_promo-protezirovanie.pug
+++ b/src/pug/sections/promos/_promo-protezirovanie.pug
@@ -17,7 +17,7 @@
 					.promo-subtitle
 						p Изготавливаем коронки в срок от 1 дня
 						p Гарантируем эстетичный и долговечный результат
-						p Используем все виды материалов и конструкций
+						p Используем все виды материалов и&nbsp;конструкций
 						
 					.text-card
 						p.txt-primary Ближайшее время для записи на&nbsp;консультацию
