--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,19 +1,19 @@
 @use "base/var" as *;
 @font-face{
 	font-family: 'Gogol';
-	src: url('../fonts/Gogol_Regular.woff2'), format('woff2');
+	src:  url('../fonts/Gogol.woff'), format('woff');
 	font-weight: 400;
 	font-display: swap;
 }
 @font-face{
 	font-family: 'PhonkSans';
-	src: url('../fonts/PhonkSans-Light.woff2'), format('woff2');
+	src: url('../fonts/PhonkSans-Light.woff2');
 	font-weight: 300;
 	font-display: swap;
 }
 @font-face{
 	font-family: 'PhonkSans';
-	src: url('../fonts/PhonkSans-Lightitalic.woff2'), format('woff2');
+	src: url('../fonts/PhonkSans-LightItalic.woff2'), format('woff2'), url('../fonts/PhonkSans-LightItalic.woff') format('woff');
 	font-weight: 300;
 	font-style: italic;
 	font-display: swap;
@@ -746,6 +746,68 @@ padding-block: 20px;
 		gap:25px;
 		&>*{
 			width: 448px;
+		}
+	}
+}
+.popup-block{
+	position: fixed;
+	inset:0;
+	background-color: rgba(0,0,0, .5);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 10;
+	display: none;
+	&.visible{display: flex;}
+	&-content{
+		width: 100%;
+		max-width: 541px;
+		background-color: #fff;
+		
+		.header-nav-logo{display: none;}
+	}
+	&-wrapper{
+		padding: 40px;
+	}
+	.popup-close{
+		width: 25px;
+		height: 25px;
+		flex-shrink: 0;
+		
+	}
+	.popup-header{
+		display: flex;
+		column-gap:5px;
+		margin-bottom: 40px;
+	}
+
+	@media (max-width: 767px) {
+		&-content{
+			height: 100%;
+			max-width: 100%;
+			padding: 0;
+			padding-bottom: 40px;
+			position: relative;
+			.popup-header{text-align: center; justify-content: center;}
+			.popup-close{
+				position: absolute;
+				right: 20px;
+				top: 12px;
+				z-index: 2;
+			}
+			.header-nav-logo{
+				display: flex;
+				border-bottom:1px solid #b9b1a6;
+				padding-left: 20px;
+				padding-right: 20px;
+			}
+		}
+		&-wrapper{
+			padding: 40px 20px;
+		}
+		.btn-primary{
+			background: rgba(171, 160, 150, 0.5);
+			border-color: rgba(171, 160, 150, 0.5);
 		}
 	}
 }
