--- a/src/scss/sections/_footer.scss
+++ b/src/scss/sections/_footer.scss
@@ -15,7 +15,8 @@
 		}
 		@media (max-width: 767px) {
 		   height: 53px;
-		   width: 359px;
+		   max-width: 359px;
+		   width: 100%;
 		   font-size: 15px;
 		}
 	}
