--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -78,7 +78,7 @@
 		.logo{width: remy(267)}
 	}
 	@media (max-width: 767px) {
-		.logo{width: 164px; height: 26px;}
+		.logo{width: 164px; height: 34px;}
 		height: 52px;
 		
 	}
@@ -145,7 +145,7 @@
 		border: 1px solid currentColor;
 		}
 	}
-	.logo{display: none; width: 164px; height: 26px;}
+	.logo{display: none; width: 164px; height: 34px;}
 	@media (max-width: 767px) {
 		align-items: flex-start;
 		position: fixed;
@@ -163,7 +163,7 @@
 		}
 		.svg-logoDark{
 			width: 164px;
-			height: 26px;
+			height: 34px;
 		}
 		.logo{display: flex; }
 		.header-nav-logo{
@@ -175,6 +175,15 @@
 		}
 		.social-block{border-left-color:#ABA096; }
 		
+	}
+}
+@media (max-width: 767px) {
+	.header-nav-logo{
+		padding: 10px 20px;
+		border-bottom:1px solid #ABA096;
+		width: 100%;
+		height: 52px;
+		.logo{display: flex; }
 	}
 }
 .header-nav-scroll{
