--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -504,7 +504,7 @@ padding-block: 20px;
 	@media(min-width: 768px) and (max-width: 1919px) {
 		font-size: remy(20);
 	}
-	@media (max-width: 401px) {
+	@media (max-width: 767px) {
 	  font-size: 16px;
 	}
 }
@@ -675,6 +675,9 @@ padding-block: 20px;
 			width: remy(13);
 			height: remy(14);
 		}
+	}
+	@media (max-width: 767px) {
+	font-size: 11px;
 	}
 }
 .product-card {
