--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -14,17 +14,14 @@ html(lang="ru")
 		//fancybox
 		link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css')
 		//Datapicker
-		//- link(rel='stylesheet' href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css")
+		
 		//Swiper
 		link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css")
 		//fonts
-		link(rel='preload' href='./fonts/PhonkSans-Light.woff2' as='font' type='font/woff2' crossorigin)
-		link(rel='preload' href='./fonts/PhonkSans-LightItalic.woff2' as='font' type='font/woff2' crossorigin)
-		link(rel='preload' href='./fonts/Gogol.woff' as='font' type='font/woff' crossorigin)
-		//- link(rel='preload' href='./fonts/Gogol.woff2' as='font' type='font/woff2' crossorigin)
-		link(rel='preconnect' href='https://fonts.googleapis.com')
-		link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin)
-		link(href='https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap' rel='stylesheet')
+		
+		//- link(rel='preconnect' href='https://fonts.googleapis.com')
+		//- link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin)
+		//- link(href='https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap' rel='stylesheet')
 		//========= custom styles ========
 		link(rel="stylesheet"  href="./css/main.css")
 		title !{title}
@@ -74,9 +71,6 @@ html(lang="ru")
 		
 		//Swiper
 		script(src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js")
-		//Datapicker
-		//- script(src='https://cdn.jsdelivr.net/npm/flatpickr')
-		//- script(src='https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/ru.js')
 		
 		//fancy
 		script(src='https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js')
