--- a/src/pug/sections/_service-page-content.pug
+++ b/src/pug/sections/_service-page-content.pug
@@ -30,7 +30,7 @@ section.service.pt-20
 				p Широкий спектр услуг. Стоматология Newlinedent предлагает полный цикл услуг, начиная от профессионального отбеливания зубов и заканчивая имплантацией всего зубного ряда под ключ.
 			.service-content-grid.flex
 				.service-content__column
-					+servCard(1, 'Консультация и диагностика','Хирургическое лечение и удаление зубов','therapy.html' )
+					+servCard(1, 'Консультация и&nbsp;диагностика','Хирургическое лечение и удаление зубов','therapy.html' )
 					+servCard(2, 'Онлайн консультация','Хирургическое лечение и удаление зубов','hygiene.html')
 					+servCard(3, 'Имплантация зубов', 'Все виды имплантации и сопутствующие операции по костной пластике', 'implantation.html')
 					+servCard(4, 'Имплантация All-on-4,<br>All-on-6', 'Все виды имплантации и сопутствующие операции по костной пластике','implantation.html')
