--- a/src/scss/sections/_promo-special.scss
+++ b/src/scss/sections/_promo-special.scss
@@ -38,6 +38,7 @@
 			color: #c7491f;
 			svg{color: #c7491f;}
 		}
+		.product-card{font-size: 11px;}
 	}
 }
 .promo-special-text{
@@ -123,6 +124,7 @@
 			padding-bottom: 10px;
 			.title-20{font-size: 15.5px;}
 			
+			
 		}
 	}
 	@media(min-width: 768px)and (max-width: 1919px) {
@@ -132,6 +134,7 @@
 		}
 	}
 	@media (max-width: 767px) {
+		
 		padding-bottom: 10px;
 		.product-card__price{font-size: 25px; padding-top: 12px;}
 		.product-card__img{
